@@ -23,7 +23,6 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * A factory for {@link ReplicaRepairGroup} that creates repair groups for all vnodes with common replicas.
@@ -45,7 +44,7 @@ public final class VnodeRepairGroupFactory implements ReplicaRepairGroupFactory
     {
         List<VnodeRepairState> sortedVnodeRepairStates = availableVnodeRepairStates.stream()
                 .sorted(Comparator.comparingLong(VnodeRepairState::lastRepairedAt))
-                .collect(Collectors.toList());
+                .toList();
 
         List<ReplicaRepairGroup> sortedRepairGroups = new ArrayList<>();
         Set<Set<DriverNode>> countedReplicaGroups = new HashSet<>();
@@ -57,14 +56,14 @@ public final class VnodeRepairGroupFactory implements ReplicaRepairGroupFactory
             if (countedReplicaGroups.add(replicas))
             {
                 List<VnodeRepairState> vnodesForReplicas = availableVnodeRepairStates.stream()
-                        .filter(v -> v.getReplicas().equals(replicas)).collect(Collectors.toList());
+                        .filter(v -> v.getReplicas().equals(replicas)).toList();
                 RepairedAt repairedAt = RepairedAt.generate(vnodesForReplicas);
                 List<LongTokenRange> commonVnodes = vnodesForReplicas.stream()
                         .map(VnodeRepairState::getTokenRange)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 sortedRepairGroups.add(new ReplicaRepairGroup(replicas, ImmutableList.copyOf(commonVnodes),
-                        repairedAt.getMinRepairedAt()));
+                        repairedAt.minRepairedAt()));
             }
         }
 
